[package]
name = "creo"
version = "0.1.0"
authors = ["koba-e964 <3303362+koba-e964@users.noreply.github.com>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.5"
path-clean = "0.1"
thiserror = "1"
